libs/brush/KisColorfulBrush.cpp
@@ -29,7 +29,7 @@ KisColorfulBrush::KisColorfulBrush(const QString &filename)
 QImage KisColorfulBrush::brushTipImage() const
 {
     QImage image = KisBrush::brushTipImage();
-    if (hasColor() && brushApplication() != IMAGESTAMP) {
+    if (isImageType() && brushApplication() != IMAGESTAMP) {
         if (m_adjustmentMidPoint != 127 ||
             !qFuzzyIsNull(m_brightnessAdjustment) ||
             !qFuzzyIsNull(m_contrastAdjustment)) {
@@ -111,7 +111,7 @@ void KisColorfulBrush::setContrastAdjustment(qreal value)
     }
 }
 
-bool KisColorfulBrush::hasColor() const
+bool KisColorfulBrush::isImageType() const
 {
     return brushType() == IMAGE || brushType() == PIPE_IMAGE;
 }
@@ -142,4 +142,14 @@ void KisColorfulBrush::toXML(QDomDocument& d, QDomElement& e) const
     e.setAttribute("BrightnessAdjustment", QString::number(m_brightnessAdjustment));
     e.setAttribute("ContrastAdjustment", QString::number(m_contrastAdjustment));
     KisBrush::toXML(d, e);
+}
+
+void KisColorfulBrush::setHasColorAndTransparency(bool value)
+{
+    m_hasColorAndTransparency = value;
+}
+
+bool KisColorfulBrush::hasColorAndTransparency() const
+{
+    return m_hasColorAndTransparency;
 }
